# ValuableHelper

./: .gitignore  demo.py  main.py  pyproject.toml  resurrect.bat  resurrector.py  start_bot.bat  start_bot.sh  tasks.json  test_imports.py
me/: identity.md  lessons.md  memory.md  overview.md  session_summaries.md  skills.md  system.md  tools_call.md  user.md  whoami.md
me/knowledge/: tools_manifest.md
me/memory/: user_prefs.md
me/my_agents/: coder_agent.md  plan_manager_prompt.md  research_agent.md  system_operator_agent.md
me/system/: agents.md  engine.md  event_architecture.md  filesystem_operations.md  interfaces.md  overview.md  providers.md  research_agent.md  tele_bot.md  tools.md  universal_agent_framework.md
me/tasks/: todo.md
my_cute_face/: animated_face.py  cartoon_face.py  face_logic.py  interactive_face.py
src/: console_chat.py  index.html  main.py  me.py  script.js  server.py  server_minimal.py  style.css
src/agents/: agent_id.py  all_agents.py  base_agent.py  coder_agent.py  main_agent.py  plan_manager_agent.py  research_agent.py  system_operator_agent.py
src/app/: app_context.py
src/backups/: multi_face_v4.html  neural_core_v3.html
src/client/: univeral_openai_client.py  (+1 more)
tasks/: develop_coder_agent.md  gmail_integration.md  modernize_telegram_bot.md  todo.md
tele_bot/: bot.py  config.py
tests/: repro_await_error.py  repro_task_issue.py  test_task_store_persistence.py  verify_await_none.py  verify_coder.py  verify_task_store_methods.py
whatMakesMe/: whatcanido.md  whoami.md
whatiwanttobe/: agent_improvement_plan.md
(+85 files in other folders)
